    - Remove arhcdetect from m68k config, it is already in the generic
      config.
    - Fix broken alpha build, input-modules isn't created for -di
      kernel flavour.
    - Adjust daily-build script for the new build system.
    - Remove special handling for "default", it was broken anyway.
    - Switch back sparc kernel handling in tftpboot.sh to the old value.
  * Thomas Poindessous
    - Remove redundant kbd-chooser from netboot pkg-list.
    - Add discover, discover-data to sparc netboot image. Closes: #227853
    - Correct netboot image building on sparc. Closes: #228519
  * Joey Hess
    - Copyright date updates.
    - Add wireless-tools to the net_drivers floppy and the netboot initrd.
    - Switch the kernel to 2.4.24 for i386.
    - Document vga=771 option for laptops with display problems.
      Closes: #229904
    - Add syslinux splash image by Matthew A. Nicholson, and another by
      Klowner, and still another by Volkan YAZICI.
    - Make all the syslinux help screens leave graphics mode when displayed.
    - Hack syslinux.txt so it all fits on one line, the same line as the boot:
      prompt.
    - Add ${BOOTPROMPT} expansion to bootscreen-subst, to make it easy 
      to make the last line in a syslinux screen not have a newline at EOF
      on the image, while still being easily editable.
    - Switch cdroms from load-installer to load-cdrom. This is to work around
      limitations in main-menu (see #218774). Driver floppy loading will now
      be started by cdrom-detect if it fails to find a CD.
    - Version the mtools build-dep. Closes: #225584
    - Let HOST, BASEDIR, or DIR be set in the environment before running
      daily-build, to override the defaults.
    - Fix up miniiso creation to fit into the new build system better.
    - Turn on miniiso creation for netboot, so there is a
      dest/netboot/mini.iso that behaves the same as a netboot would.
    - Add a dest/cdrom/debian-cd_info.tar.gz with the syslinux screens